<resources>
    <string name="app_name">TimeDiff</string>
    <string name="calculate">CALCULATE</string>
    <string name="learn">LEARN</string>
    <string name="clockModeSwitch">CLOCK MODE</string>
    <string name="textOn">24hr</string>
    <string name="textOff">12hr</string>
    <string name="textMode">12hr 24hr</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="hint1">08</string>
    <string name="hint2">20</string>
    <string name="defaultStr">00</string>
    <string name="colon">:</string>
    <string name="diff">diff</string>
    <string name="icon">hourglass</string>
    <string name="check">CHECK</string>
    <string name="retry">RETRY</string>
    <string name="next">NEXT</string>
    <string name="defaultStr2">00:00</string>
    <string name="defaultEmpty"></string>
    <string name="inputGuess">Input your guess!</string>
    <string name="hr">hr</string>
    <string name="min">min</string>
    <string name="imageButton">hourglass</string>
    <string name="defaultTab"> </string>
    <string name="contentDescription1">&lt;8hr</string>
    <string name="contentDescription2">>=8hr and &lt;=16hr</string>
    <string name="contentDescription3">>16hr</string>

</resources>