<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfd8fa">

    <TextView
        android:id="@+id/endHour"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/defaultStr2"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/startHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startHour" />

    <TextView
        android:id="@+id/startHour"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:text="@string/defaultStr2"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/endHour"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startLearn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/start"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/endLearn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startHour" />

    <TextView
        android:id="@+id/endLearn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/end"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/startLearn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startLearn" />

    <Button
        android:id="@+id/check_Hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:paddingLeft="32dp"
        android:paddingTop="8dp"
        android:paddingRight="32dp"
        android:paddingBottom="8dp"
        android:text="@string/check"
        android:textSize="34sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/hrInputHard"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:text="@string/hr"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/hrInputHard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startLearn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/min"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/mnInputHard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/mnInputHard"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="40dp"
        android:layout_height="15dp"
        android:background="#777777"
        android:text="@string/defaultEmpty"
        app:layout_constraintBaseline_toBaselineOf="@+id/startHour"
        app:layout_constraintEnd_toStartOf="@+id/endHour"
        app:layout_constraintStart_toEndOf="@+id/startHour" />

</androidx.constraintlayout.widget.ConstraintLayout>