<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfd8fa">

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/next"
        android:textSize="34sp"
        app:backgroundTint="@color/white"
        app:iconPadding="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/retry" />

    <TextView
        android:id="@+id/endHour"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/defaultStr2"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/startHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startHour" />

    <TextView
        android:id="@+id/startHour"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:text="@string/defaultStr2"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/endHour"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/b1Result"
        android:layout_width="96dp"
        android:layout_height="160dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="84dp"
        android:background="#dfd8fa"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/b2Result"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startLearn"
        app:srcCompat="@drawable/hourglass2" />

    <ImageButton
        android:id="@+id/b2Result"
        android:layout_width="96dp"
        android:layout_height="160dp"
        android:layout_marginTop="84dp"
        android:background="#dfd8fa"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/b3Result"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b1Result"
        app:layout_constraintTop_toBottomOf="@+id/startLearn"
        app:srcCompat="@drawable/hourglass2" />

    <TextView
        android:id="@+id/startLearn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/start"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/endLearn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startHour" />

    <TextView
        android:id="@+id/endLearn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/end"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/startLearn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startLearn" />

    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/retry"
        android:textSize="34sp"
        app:backgroundTint="#FFFFFF"
        app:iconPadding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b2Result" />

    <ImageButton
        android:id="@+id/b3Result"
        android:layout_width="96dp"
        android:layout_height="160dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="32dp"
        android:background="#dfd8fa"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b2Result"
        app:layout_constraintTop_toBottomOf="@+id/endLearn"
        app:srcCompat="@drawable/hourglass2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="40dp"
        android:layout_height="15dp"
        android:background="#656565"
        app:layout_constraintBaseline_toBaselineOf="@+id/startHour"
        app:layout_constraintEnd_toStartOf="@+id/endHour"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toEndOf="@+id/startHour" />

</androidx.constraintlayout.widget.ConstraintLayout>